--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
             <h1 id="develop">Develop what you need.</h1>
             <p id="p2">I’m a developer, so I know how to create your website 
                 to run across devices using the latest technologies available.</p>
+            <br><br><br>
             <hr class="br">
         
             <!-- 4th text box -->
-            <p class="br2 help">I can help.</p>
+            <p class="br help">I can help.</p>
                     
             <h1 style="font-size: 25px;color: #30E3CA;padding-top: 35px;">I’m currently available for freelance work.</h1>
             <p class="br1" style="color: #40514E">If you have a project that you want to get started, 
