--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     
     <body>
 
+        <div class="divup">
+            <img style="border-radius: 50%;position: absolute; left: 35px;top: 10px; width: 50px; height: 50px;" src="pics/yane1.png">  
+            <p style="padding: 25px 0px 0px 100px; color: #11999E;"><span>By Yane Zhekov</span></p>
+        </div>
+
         <!-- 1st division -->
         <div class="div1">
             
